[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[package.metadata.maturin]
requires-python = ">=3.8"
classifier = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: Apache Software License",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
	"Topic :: Security :: Cryptography",
	"Topic :: System :: Distributed Computing",
	"Topic :: Systems Administration :: Authentication/Directory"
]
maintainer = "Michael Rosenberg"
maintainer-email = "michael@mrosenberg.pub"
project-url = { homepage = "https://github.com/rozbb/zkcreds-rs/" }